--- a/src/main/resources/templates/bookView.html
+++ b/src/main/resources/templates/bookView.html
@@ -7,15 +7,15 @@
 </head>
 <body>
 <table>
-    <th:block block th:each="book : $(books)">
+    <th:block th:each = "book : ${books}">
         <tr>
             <td th:text="${book.id}">...</td>
             <td th:text="${book.title}">...</td>
             <td th:text="${book.author}">...</td>
-            <td th:text="${book.publishinghouse}">...</td>
-            <td th:text="${book.booktype}">...</td>
-            <td th:text="${book.booklanguage}">...</td>
-            <td th:text="${book.nrpages}">...</td>
+            <td th:text="${book.publishingHouse}">...</td>
+            <td th:text="${book.bookType}">...</td>
+            <td th:text="${book.bookLanguage}">...</td>
+            <td th:text="${book.nrPages}">...</td>
             <td th:text="${book.isbn}">...</td>
         </tr>
     </th:block>
