filtrare dupa autori si titlu

--- a/src/main/resources/templates/authorView.html
+++ b/src/main/resources/templates/authorView.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-<form th:object="${book}" th:action="@{/books/search}" method="get">
+<form th:object="${book}" th:action="@{/books/search/author}" method="get">
     <input type="text" name="search" id="search" th:value="${search}"/>
     <input type="submit" value="Search"/>
     <div th:if="${not #lists.isEmpty(search)}">
