--- a/src/main/resources/templates/titleView.html
+++ b/src/main/resources/templates/titleView.html
@@ -5,9 +5,9 @@
     <title></title>
 </head>
 <body>
-<form th:object="${book}" th:action="@{/books/search}" method="get">
-    <input type="text" name="search" id="search" th:value="${search}"/>
-    <input type="submit" value="Search"/>
+<form th:object="${book}" th:action="@{/books/search/title}" method="get">
+    <input type="text" name="search" id="search" th:value="${search}" />
+    <input type="submit" value="Search" />
     <div th:if="${not #lists.isEmpty(search)}">
         <h2>Books List</h2>
         <table class="table table-striped">
