--- a/src/main/resources/templates/searchView.html
+++ b/src/main/resources/templates/searchView.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
-
-    <title></title>
+    <title>Searching books</title>
 </head>
 <body>
+h1>Online library</h1>
+<h2>Searching books</h2>
 <form th:object="${book}" th:action="@{/books/search}" method="get">
     <input type="text" name="searchField" id="searchField" th:value="${searchField}" />
     <input type="submit" value="Search" />
@@ -15,12 +16,14 @@
                 <th>Id</th>
                 <th>Author</th>
                 <th>Title</th>
+                <th>Publishing House</th>
                 <th>Category</th>
             </tr>
             <tr th:each="book: ${searchResult}">
                 <td th:text="${book.id}">id</td>
                 <td th:text="${book.author}">author</td>
                 <td th:text="${book.title}">title</td>
+                <td th:text="${book.publishingHouse}">publishingHouse</td>
                 <td th:text="${book.bookType}">bookType</td>
             </tr>
         </table>
