--- a/src/main/resources/templates/booksView.html
+++ b/src/main/resources/templates/booksView.html
@@ -2,10 +2,12 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:form="http://www.w3.org/1999/xhtml">
 <head>
 
-    <title>Get all books</title>
+    <title>View all books</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
+
+
 <table>
     <th:block th:each = "book : ${books}">
         <tr>
