--- a/src/main/resources/templates/searchView.html
+++ b/src/main/resources/templates/searchView.html
@@ -4,7 +4,7 @@
     <title>Searching books</title>
 </head>
 <body>
-h1>Online library</h1>
+<h1>Online library</h1>
 <h2>Searching books</h2>
 <form th:object="${book}" th:action="@{/books/search}" method="get">
     <input type="text" name="searchField" id="searchField" th:value="${searchField}" />
