--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,16 +4,18 @@
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"/>
     <title>Welcome</title>
 </head>
-<body style="background-color:yellow;">
+<body style="background-color:powderblue;">
 <table>
     <tr>
         <td>WELCOME TO THE ONLINE LIBRARY!</td>
-
     </tr>
     <tr>
-        <td><a href="/books"> Books </a>
-        </td>
-       <td><a href="/books/search"> Search for books </a></td>
+        <td><a href="/books"> Books </a></td>
+    </tr>
+    <tr>
+        <td><a href="/books/search"> Search for books </a></td>
+    </tr>
+    <tr>
         <td><a href="/registration"> Registration </a></td>
     </tr>
 </table>
