--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<h1>Error Page</h1>
+<p>Application has encountered an error. Please contact support at norbiborzan@gmail.com </p>
 
-</body>
-</html>
