review added, paid field added to user, home page added links (add comment, view comments)

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -13,6 +13,7 @@
     <p>Last name: <input type="text" th:field="*{lastName}" /></p>
     <p>Phone: <input type="text" th:field="*{phone}" /></p>
     <p>Email: <input type="text" th:field="*{email}" /></p>
+    <p>Paid: <input type="text" th:field="*{paid}" /></p>
     <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
 </form>
 </body>
