review added, paid field added to user, home page added links (add comment, view comments)

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"/>
-    <title>Welcome</title>
+    <title>WELCOME</title>
 </head>
 <body style="background-color:powderblue;">
 <table>
