--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<h1>Online Library</h1>
+<h1>ONLINE LIBRARY</h1>
 <h2>SUBMIT NEW USER FORM</h2>
 <form th:object="${user}" th:action="@{/registration}" method="post">
     <p>User id: <input type="text" th:field="*{id}" /></p>
