--- a/src/main/resources/templates/bookView.html
+++ b/src/main/resources/templates/bookView.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:form="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Get all books</title>
+    <title>Show all books</title>
 </head>
 <body>
 <table>
