--- a/src/main/resources/templates/newReview.html
+++ b/src/main/resources/templates/newReview.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<h1>Online Library</h1>
+<h1>ONLINE LIBRARY</h1>
 <h2>SUBMIT A NEW COMMENT FORM</h2>
 <form th:object="${review}" th:action="@{/books/newReview}" method="post">
     <p>Review id: <input type="text" th:field="*{id}" /></p>
