--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<h1>Online library</h1>
+<h1>ONLINE LIBRARY</h1>
 <h2>NEW BOOK DETAILS</h2>
 <table>
     <thead>
