--- a/src/main/resources/templates/updateBook.html
+++ b/src/main/resources/templates/updateBook.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<h1>Online Library</h1>
+<h1>ONLINE LIBRARY</h1>
 <h2>SUBMIT NEW BOOK FORM</h2>
 <form th:object="${book}" th:action="@{/updateBook/{id}}" method="post">
     <p>Book title: <input type="text" th:field="*{title}" /></p>
