--- a/src/main/resources/templates/userSearchView.html
+++ b/src/main/resources/templates/userSearchView.html
@@ -4,7 +4,7 @@
     <title>Searching users</title>
 </head>
 <body>
-<h1>Online library</h1>
+<h1>ONLINE LIBRARY</h1>
 <h2>Searching users</h2>
 <form th:object="${user}" th:action="@{/users/search}" method="get">
     <input type="text" name="searchField" id="searchField" th:value="${searchField}" />
