--- a/src/main/resources/templates/userView.html
+++ b/src/main/resources/templates/userView.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
 
-    <title>Get all users</title>
+    <title>Show all users</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
