--- a/src/main/resources/templates/bookView.html
+++ b/src/main/resources/templates/bookView.html
@@ -15,6 +15,9 @@
             <td th:text="${book.bookLanguage}">...</td>
             <td th:text="${book.nrPages}">...</td>
             <td th:text="${book.isbn}">...</td>
+            <script> var id= '${book.id}'; </script>
+            <td><a href="/books/review/{id}"> View comments </a></td>
+            <td><a href="/books/newReview"> Add a comment </a></td>
         </tr>
     </th:block>
 </table>
