review comment, update book+user

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,2 +1,4 @@
-<h1>Error Page</h1>
-<p>Application has encountered an error. Please contact support at onlinelibrary@gmail.com </p>
+<div style="font-family: 'Roboto', sans-serif;">
+    <h1 style="color: #cb1217; font-size: 50px;">Error Page</h1>
+    <p style="font-size: 25px;">Application has encountered an error. Please contact support at <a style="color: #cb1217;" href="mailto:onlinelibrary@gmail.com">onlinelibrary@gmail.com</a>  </p>
+</div>
