--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,12 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"/>
-    <title>WELCOME</title>
+    <title>Welcome</title>
 </head>
-<body style="background-color:powderblue;">
+<body bgcolor="#E6E6FA">
 <table>
     <tr>
-        <td>WELCOME TO THE ONLINE LIBRARY!</td>
+        <td style='text-align:center;vertical-align:middle'>WELCOME TO THE ONLINE LIBRARY!</td>
     </tr>
     <tr>
         <td><a href="/books"> Books </a></td>
