--- a/src/main/resources/templates/reviewView.html
+++ b/src/main/resources/templates/reviewView.html
@@ -3,7 +3,7 @@
 <head>
     <title>Get review </title>
 </head>
-<body>
+<body bgcolor="#ccff99">
 <table>
     <th:block th:each = "review : ${reviews}">
         <tr>
