--- a/src/main/resources/templates/searchView.html
+++ b/src/main/resources/templates/searchView.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <title>Searching books</title>
 </head>
-<body>
+<body bgcolor="#ccff99">
 <h1>ONLINE LIBRARY</h1>
 <h2>Searching books</h2>
 <form th:object="${book}" th:action="@{/books/search}" method="get">
