--- a/src/main/resources/templates/userSearchView.html
+++ b/src/main/resources/templates/userSearchView.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <title>Searching users</title>
 </head>
-<body>
+<body bgcolor="#ccff99">
 <h1>ONLINE LIBRARY</h1>
 <h2>Searching users</h2>
 <form th:object="${user}" th:action="@{/users/search}" method="get">
