--- a/src/main/resources/templates/userView.html
+++ b/src/main/resources/templates/userView.html
@@ -5,7 +5,7 @@
     <title>Show all users</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
-<body>
+<body bgcolor="#ccff99">
 
 <table>
     <th:block th:each = "user : ${users}">
