--- a/src/main/resources/templates/newReview.html
+++ b/src/main/resources/templates/newReview.html
@@ -4,7 +4,7 @@
     <title>Submit a new comment</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
-<body>
+<body bgcolor="#ccff99">
 <h1>ONLINE LIBRARY</h1>
 <h2>SUBMIT A NEW COMMENT FORM</h2>
 <form th:object="${review}" th:action="@{/books/newReview}" method="post">
