--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -4,11 +4,10 @@
     <title>Submit a new user</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
-<body>
+<body bgcolor="#ccff99">
 <h1>ONLINE LIBRARY</h1>
 <h2>SUBMIT NEW USER FORM</h2>
 <form th:object="${user}" th:action="@{/registration}" method="post">
-    <p>User id: <input type="text" th:field="*{id}" /></p>
     <p>First name: <input type="text" th:field="*{firstName}" /></p>
     <p>Last name: <input type="text" th:field="*{lastName}" /></p>
     <p>Phone: <input type="text" th:field="*{phone}" /></p>
