--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -4,7 +4,7 @@
     <title>Submitting a book</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
-<body>
+<body  bgcolor="#ccff99">
 <h1>ONLINE LIBRARY</h1>
 <h2>NEW BOOK DETAILS</h2>
 <table>
