--- a/src/main/resources/templates/updateBook.html
+++ b/src/main/resources/templates/updateBook.html
@@ -4,7 +4,7 @@
     <title>Submitting a book</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
-<body>
+<body bgcolor="#ccff99">
 <h1>ONLINE LIBRARY</h1>
 <h2>SUBMIT NEW BOOK FORM</h2>
 <form th:object="${book}" th:action="@{/updateBook/{id}}" method="post">
