JUnit test added, logger

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,14 +10,12 @@
         <td style='text-align:center;vertical-align:middle'>WELCOME TO THE ONLINE LIBRARY!</td>
     </tr>
     <tr>
-        <td><a href="/books"> Books </a></td>
+        <td><a href="/homeBooks"> Book Management </a></td>
     </tr>
     <tr>
-        <td><a href="/books/search"> Search for books </a></td>
+        <td><a href="/homeUsers"> User Management </a></td>
     </tr>
-    <tr>
-        <td><a href="/registration"> Registration </a></td>
-    </tr>
+
 </table>
 </body>
 </html>
