--- a/src/main/resources/templates/updateBook.html
+++ b/src/main/resources/templates/updateBook.html
@@ -7,7 +7,7 @@
 <body bgcolor="#ccff99">
 <h1>ONLINE LIBRARY</h1>
 <h2>SUBMIT NEW BOOK FORM</h2>
-<form th:object="${book}" th:action="@{/updateBook/{id}}" method="post">
+<form th:object="${book}" th:action="@{/updateBook/{id}(id=${book.id})}" method="post">
     <p>Book title: <input type="text" th:field="*{title}" /></p>
     <p>Book author: <input type="text" th:field="*{author}" /></p>
     <p>Publishing house: <input type="text" th:field="*{publishingHouse}" /></p>
