html files corrected, update corrected, "home-page" corrected

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,13 +7,13 @@
 <body bgcolor="#E6E6FA">
 <table>
     <tr>
-        <td style='text-align:center;vertical-align:middle'> WELCOME TO THE ONLINE LIBRARY!</td>
+        <td style='text-align:center;vertical-align:middle'>WELCOME TO THE ONLINE LIBRARY!</td>
     </tr>
     <tr>
-        <td><a href="/homeBooks"> Book Management </a></td>
+        <td><a href="/books"> Book Management </a></td>
     </tr>
     <tr>
-        <td><a href="/homeUsers"> User Management </a></td>
+        <td><a href="/users"> User Management </a></td>
     </tr>
 
 </table>
