--- a/src/main/resources/templates/addUser.html
+++ b/src/main/resources/templates/addUser.html
@@ -7,7 +7,7 @@
 <body bgcolor="#ccff99">
 <h1>ONLINE LIBRARY</h1>
 <h2>SUBMIT NEW USER FORM</h2>
-<form th:object="${user}" th:action="@{/registration}" method="post">
+<form th:object="${user}" th:action="@{/addUser}" method="post">
     <p>First name: <input type="text" th:field="*{firstName}" /></p>
     <p>Last name: <input type="text" th:field="*{lastName}" /></p>
     <p>Phone: <input type="text" th:field="*{phone}" /></p>
