--- a/src/main/resources/templates/addUser.html
+++ b/src/main/resources/templates/addUser.html
@@ -1,18 +1,18 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Submitting an user</title>
+    <title>Submit a new user</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
-<body>
-<h1>Online Library</h1>
+<body bgcolor="#ccff99">
+<h1>ONLINE LIBRARY</h1>
 <h2>SUBMIT NEW USER FORM</h2>
-<form th:object="${user}" th:action="@{/newUser}" method="post">
-    <p>User id: <input type="text" th:field="*{id}" /></p>
-    <p>First Name: <input type="text" th:field="*{firstName}" /></p>
-    <p>Last Name: <input type="text" th:field="*{lastName}" /></p>
+<form th:object="${user}" th:action="@{/addUser}" method="post">
+    <p>First name: <input type="text" th:field="*{firstName}" /></p>
+    <p>Last name: <input type="text" th:field="*{lastName}" /></p>
     <p>Phone: <input type="text" th:field="*{phone}" /></p>
     <p>Email: <input type="text" th:field="*{email}" /></p>
+    <p>Paid: <input type="text" th:field="*{paid}" /></p>
     <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
 </form>
 </body>
