--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,4 +1,4 @@
-<div style="font-family: 'Roboto', sans-serif;">
-    <h1 style="color: #cb1217; font-size: 50px;">Error Page</h1>
-    <p style="font-size: 25px;">Application has encountered an error. Please contact support at <a style="color: #cb1217;" href="mailto:onlinelibrary@gmail.com">onlinelibrary@gmail.com</a>  </p>
-</div>
+<!--<div style="font-family: 'Roboto', sans-serif;">-->
+    <!--<h1 style="color: #cb1217; font-size: 50px;">Error Page</h1>-->
+    <!--<p style="font-size: 25px;">Application has encountered an error. Please contact support at <a style="color: #cb1217;" href="mailto:onlinelibrary@gmail.com">onlinelibrary@gmail.com</a>  </p>-->
+<!--</div>-->
