--- a/src/main/resources/templates/updateUser.html
+++ b/src/main/resources/templates/updateUser.html
@@ -7,7 +7,7 @@
 <body bgcolor="#ccff99">
 <h1>ONLINE LIBRARY</h1>
 <h2>SUBMIT NEW USER FORM</h2>
-<form th:object="${book}" th:action="@{/updateUser/{id}(id=${user.id})}" method="post">
+<form th:object="${user}" th:action="@{/updateUser/{id}(id=${user.id})}" method="post">
     <p>First Name: <input type="text" th:field="*{firstName}" /></p>
     <p>Last Name: <input type="text" th:field="*{lastName}" /></p>
     <p>Phone: <input type="text" th:field="*{phone}" /></p>
