--- a/src/main/resources/templates/newReview.html
+++ b/src/main/resources/templates/newReview.html
@@ -10,7 +10,7 @@
 <form th:object="${review}" th:action="@{/books/newReview}" method="post">
 
     <p>Comment: <input type="text" th:field="*{comment}" /></p>
-    <p>Book id: <input type="text" th:field="*{bookId}" /></p>
+    <p>Book id (from the address bar): <input type="text" th:field="*{bookId}" /></p>
     <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
 </form>
 </body>
